Version 0.1.23     unreleased

	* Upgrade to Poetry v1.8.0 and make related adjustments.
	* Disable Python keyring via poetry.toml.
	* Update Poetry install instructions in DEVELOPER.md.
	* Pull in latest version of run-script-framework.
	* Update GHA workflows to use Poetry v1.8.0.

Version 0.1.22     17 Jan 2024

	* Update jinja2 to address CVE-2024-22195 from Dependabot.

Version 0.1.21     05 Nov 2023

	* Update urllib3 to address Dependabot warnings.
	* Upgrade to Poetry v1.7.0 for official Python 3.12 support.

Version 0.1.20     11 Oct 2023

	* Upgrade major dependencies.
	* Upgrade build process to Poetry v1.6.1.
	* Add support for Python v3.12 and drop support for v3.8.

Version 0.1.19     07 Jun 2023

	* Fix checktabs to be safe for file named '-'.
	* Upgrade all dependencies to the latest major version.
	* Drop support for Python 3.7; many dependencies are now doing the same.
	* Upgrade to Poetry v1.5.1 and make related changes.

Version 0.1.18     02 Jan 2023

	* Simplify install instructions based on testing with OpenWRT 22.03.2.
	* Pull Sphinx fields from metadata rather than parsing pyproject.toml.

Version 0.1.17     30 Dec 2022

	* Convert to latest readthedocs.io standard.
	* Add NOTICE file to sdist, alongside existing LICENSE file.
	* Automate the existing manual release process using GitHub Actions.
	* Adjust GHA build to run MacOS and Windows tests only on latest Python.

Version 0.1.16     24 Oct 2022

	* Refactor the run script and pre-commit hooks to reduce duplication.
	* Rework the GitHub Actions build process to pull out shared code.

Version 0.1.15     05 Sep 2022

	* Upgrade to Poetry v1.2.0 and make related build process changes.
	* Upgrade to Pylint 2.15.0 and address warnings.
	* Fix Pylint's configured class-attribute-naming-style to be snake_case.
	* Adjust Black configuration to target Python 3.7, 3.8, 3.9, and 3.10.
	* Add dependency caching to GitHub Actions workflow.