@@ -5,6 +5,7 @@ Version 0.1.23     unreleased
 	* Update Poetry install instructions in DEVELOPER.md.
 	* Pull in latest version of run-script-framework.
 	* Update GHA workflows to use Poetry v1.8.0.
+	* Add support for 'run outdated' and update dependencies.
 
 Version 0.1.22     17 Jan 2024
 
